[gd_scene load_steps=13 format=3 uid="uid://rqrufasdcnra"]

[ext_resource type="Script" path="res://Core/Entities/Entity.gd" id="1_r1diu"]
[ext_resource type="Resource" uid="uid://gv0a4dh61arx" path="res://Core/Items/Weapons/PifGun.tres" id="2_4fer7"]
[ext_resource type="PackedScene" uid="uid://5wql4jsbit8e" path="res://Core/Components/SkillsComponent.tscn" id="2_5uytd"]
[ext_resource type="PackedScene" uid="uid://cppyr6vfd7ml4" path="res://Core/Components/DefenseComponent.tscn" id="2_jpmb3"]
[ext_resource type="PackedScene" uid="uid://dxiga3kqjoa14" path="res://Core/Components/HealthComponent.tscn" id="3_pbrah"]
[ext_resource type="PackedScene" uid="uid://denyv2nvbauri" path="res://Core/Components/PlayerControllComponent.tscn" id="4_y6xqc"]
[ext_resource type="Script" path="res://Core/Components/CollectibleMagnesComponent.gd" id="9_gwmld"]
[ext_resource type="PackedScene" uid="uid://cxaprl66dakbk" path="res://Core/Components/InventoryComponent.tscn" id="10_n81qq"]
[ext_resource type="Texture2D" uid="uid://dnrabtu7i01jt" path="res://noble4.png" id="10_s0smb"]
[ext_resource type="PackedScene" uid="uid://h10bilblqp45" path="res://Core/Components/Hitboxes/SimpleHitboxComponent.tscn" id="11_j36ml"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1w8v"]
radius = 60.075

[sub_resource type="CircleShape2D" id="CircleShape2D_ktkor"]
radius = 60.1332

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("defenseComponent", "healthComponent", "controllComponent", "skillsComponent", "inventoryComponent", "collectibleMagnesComponent") groups=["Player"]]
collision_layer = 127
collision_mask = 127
motion_mode = 1
script = ExtResource("1_r1diu")
mainItem = ExtResource("2_4fer7")
defenseComponent = NodePath("DefenseComponent")
healthComponent = NodePath("HealthComponent")
controllComponent = NodePath("PlayerControllComponent")
skillsComponent = NodePath("SkillsComponent")
inventoryComponent = NodePath("InventoryComponent")
collectibleMagnesComponent = NodePath("CollectibleMagnesComponent")

[node name="SkillsComponent" parent="." instance=ExtResource("2_5uytd")]

[node name="PlayerControllComponent" parent="." instance=ExtResource("4_y6xqc")]

[node name="HealthComponent" parent="." instance=ExtResource("3_pbrah")]

[node name="DefenseComponent" parent="." instance=ExtResource("2_jpmb3")]

[node name="InventoryComponent" parent="." instance=ExtResource("10_n81qq")]
items = Array[Resource("res://Core/Items/ItemResource.gd")]([ExtResource("2_4fer7")])

[node name="CollectibleMagnesComponent" type="Node" parent="." node_paths=PackedStringArray("parentEntity")]
script = ExtResource("9_gwmld")
parentEntity = NodePath("..")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_s0smb")

[node name="SimpleHitboxComponent" parent="." node_paths=PackedStringArray("paretnEntity") instance=ExtResource("11_j36ml")]
collision_layer = 8
collision_mask = 95
paretnEntity = NodePath("..")

[node name="HurtBox" type="CollisionShape2D" parent="SimpleHitboxComponent"]
shape = SubResource("CircleShape2D_h1w8v")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ktkor")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="healthChanged" from="HealthComponent" to="." method="_on_health_component_health_changed"]
